# openstack_mcp_server

./: .gitignore  Containerfile  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yml  tox.yml
examples/: osp_mcp_client.py  pyproject.toml
server/: config.py  openstack_client.py  server.py
